[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/MusicTracks.gd" type="Script" id=1]
[ext_resource path="res://assets/heading2.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/heading1.tres" type="DynamicFont" id=3]

[node name="MusicTracks" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1480.0
margin_bottom = 580.0
window_title = "Open File(s)"
dialog_hide_on_ok = true
mode = 1
access = 2
filters = PoolStringArray( "*.mp3, *.ogg ; Supported Music Files" )

[node name="VB" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1480.0
margin_bottom = 580.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="VB"]
margin_right = 1460.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 3 )
text = "Music Tracks"

[node name="Sp1" type="Control" parent="VB"]
margin_top = 44.0
margin_right = 1460.0
margin_bottom = 44.0

[node name="Menu" type="HBoxContainer" parent="VB"]
margin_top = 54.0
margin_right = 1460.0
margin_bottom = 74.0

[node name="Select" type="Button" parent="VB/Menu"]
margin_right = 82.0
margin_bottom = 20.0
text = "Select files"

[node name="Spacer" type="Control" parent="VB/Menu"]
margin_left = 86.0
margin_right = 1333.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Remove" type="Button" parent="VB/Menu"]
margin_left = 1337.0
margin_right = 1460.0
margin_bottom = 20.0
text = "Remove selected"

[node name="Sp2" type="Control" parent="VB"]
margin_top = 84.0
margin_right = 1460.0
margin_bottom = 84.0

[node name="Headings" type="HBoxContainer" parent="VB"]
margin_top = 94.0
margin_right = 1460.0
margin_bottom = 117.0
custom_constants/separation = 0

[node name="Filename" type="Label" parent="VB/Headings"]
margin_right = 100.0
margin_bottom = 23.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Filename"

[node name="Directory" type="Label" parent="VB/Headings"]
margin_left = 100.0
margin_right = 200.0
margin_bottom = 23.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Directory"

[node name="Path" type="Label" parent="VB/Headings"]
margin_left = 200.0
margin_right = 238.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "Path"

[node name="SC" type="ScrollContainer" parent="VB"]
margin_top = 127.0
margin_right = 1460.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ItemList" type="ItemList" parent="VB/SC"]
margin_right = 1460.0
margin_bottom = 9.0
size_flags_horizontal = 3
select_mode = 1
auto_height = true
max_columns = 3
same_column_width = true

[connection signal="files_selected" from="FileDialog" to="." method="_on_FileDialog_files_selected"]
[connection signal="pressed" from="VB/Menu/Select" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VB/Menu/Remove" to="." method="_on_Remove_pressed"]
[connection signal="sort_children" from="VB/SC" to="." method="_on_SC_sort_children"]
